# FlutterDoom

./: CHANGELOG.md  README.md  doomsource_apple_workaround.sh  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/kotlin/com/example/flutterdoom/: MainActivity.kt
ios/: .gitignore  DoomSource.podspec
ios/Runner.xcodeproj/: project.pbxproj
ios/linuxdoom-1.10/: d_main.c  dart_interface.c  dart_interface.h  debug.h  i_system.c  i_system.h  i_video.c
lib/: doom.dart  engine.dart  main.dart
lib/keyboard/: directional_keys.dart  portrait_keyboard.dart  single_key.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
linuxdoom-1.10/: am_map.c  am_map.h  d_alloca.h  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_pthreads.h  d_string.h  d_textur.h  d_think.h  d_ticcmd.h  d_unistd.h  dart_interface.c  dart_interface.h  debug.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  (+92 more)
linuxdoom-1.10/Midiplay/: midiplay.c  opl.h
macos/: .gitignore  DoomSource.podspec  Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  main.cpp  win32_window.cpp  win32_window.h
